fix : edit overflow field

--- a/inyourview/src/components/way/way.module.css
+++ b/inyourview/src/components/way/way.module.css
@@ -8,7 +8,8 @@
 .hello {
     margin: 0 7em;
     padding: 0;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
     flex: 1 1;
     text-align: center;
 }
@@ -32,4 +33,9 @@
 
 .img {
     width: 100%;
+}
+
+.info {
+    display: block;
+    margin: 4em 0;
 }
